@@ -1,4 +1,7 @@
 CVS code -
+- nano.h:
+	- Rename NANO_ALT_REPLACE_KEY to NANO_REPLACE_ALTKEY, for
+	  consistency. (DLR)
 - BUGS:
 	- Miscellaneous cosmetic fixes. (DLR)
 
